<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/bg"
    tools:context="se.newton.scrummerz.signedInStart">

    <TextView
        android:id="@+id/scanner"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="16dp"
        android:text="@string/menuRegisterAttendance"
        android:textColor="@color/cardview_dark_background"
        android:textSize="24sp"
        app:layout_constraintLeft_toLeftOf="@+id/myCoursesTextView"
        app:layout_constraintTop_toBottomOf="@+id/myGradesTextView" />

    <TextView
        android:id="@+id/myGradesTextView"
        android:layout_width="154dp"
        android:layout_height="30dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="16dp"
        android:text="@string/menuMyGrades"
        android:textColor="@color/cardview_dark_background"
        android:textSize="24sp"
        app:layout_constraintLeft_toLeftOf="@+id/myCoursesTextView"
        app:layout_constraintTop_toBottomOf="@+id/myCoursesTextView" />

    <TextView
        android:id="@+id/myCoursesTextView"
        android:layout_width="154dp"
        android:layout_height="31dp"
        android:clickable="true"
        android:text="@string/menuMyCourses"
        android:textColor="@color/cardview_dark_background"
        android:textSize="24sp"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@+id/welcome"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/welcome"
        android:layout_width="361dp"
        android:layout_height="0dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/welcome"
        android:textAlignment="center"
        android:textColor="@color/cardview_dark_background"
        android:textSize="24sp"
        app:layout_constraintHorizontal_bias="0.571"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="100dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/feelingToday"
        android:textColor="@color/cardview_dark_background"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.504" />

    <ImageButton
        android:id="@+id/negative"
        android:layout_width="70dp"
        android:layout_height="68dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="8dp"
        android:background="@android:color/transparent"
        android:scaleType="fitCenter"
        app:layout_constraintLeft_toLeftOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        app:srcCompat="@drawable/scared" />

    <ImageButton
        android:id="@+id/neutral"
        android:layout_width="70dp"
        android:layout_height="68dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:background="@android:color/transparent"
        android:scaleType="fitCenter"
        app:layout_constraintHorizontal_bias="0.484"
        app:layout_constraintLeft_toLeftOf="@+id/textView5"
        app:layout_constraintRight_toRightOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        app:srcCompat="@drawable/neutral" />

    <ImageButton
        android:id="@+id/positive"
        android:layout_width="70dp"
        android:layout_height="68dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="8dp"
        android:background="@android:color/transparent"
        android:scaleType="fitCenter"
        app:layout_constraintRight_toRightOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        app:srcCompat="@drawable/cool" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="282dp"
        android:layout_height="86dp"
        app:srcCompat="@drawable/portalen"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="32dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent" />

</android.support.constraint.ConstraintLayout>
